{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 19,
  "lineage": "9843521b-c6f2-4ead-dd12-0989ee8f2ac2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "socks-shop-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248426330598:internet-gateway/igw-08bf3996b65f5e3b8",
            "id": "igw-08bf3996b65f5e3b8",
            "owner_id": "248426330598",
            "tags": {
              "Name": "socks-shop-igw"
            },
            "tags_all": {
              "Name": "socks-shop-igw"
            },
            "vpc_id": "vpc-0a147501e78bcf011"
          },
          "dependencies": [
            "aws_vpc.socks-shop-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "socks-shop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248426330598:route-table/rtb-0fb5442ff7805b591",
            "id": "rtb-0fb5442ff7805b591",
            "owner_id": "248426330598",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08bf3996b65f5e3b8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a147501e78bcf011"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.socks-shop-igw",
            "aws_vpc.socks-shop-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "socks-shop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f1dcb58d6866d5d",
            "route_table_id": "rtb-0fb5442ff7805b591",
            "subnet_id": "subnet-02982534dfd1a9b65"
          },
          "dependencies": [
            "aws_internet_gateway.socks-shop-igw",
            "aws_route_table.socks-shop",
            "aws_subnet.socks-shop",
            "aws_vpc.socks-shop-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c30bdd7b4136fae8",
            "route_table_id": "rtb-0fb5442ff7805b591",
            "subnet_id": "subnet-0eca6a9a2ac4aeb18"
          },
          "dependencies": [
            "aws_internet_gateway.socks-shop-igw",
            "aws_route_table.socks-shop",
            "aws_subnet.socks-shop",
            "aws_vpc.socks-shop-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "socks-shop-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248426330598:security-group/sg-09867945e550a3ca2",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09867945e550a3ca2",
            "ingress": [
              {
                "cidr_blocks": [
                  "105.112.17.88/32"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "socks-shop-eks-cluster",
            "name_prefix": "",
            "owner_id": "248426330598",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shocks-shop-eks"
            },
            "tags_all": {
              "Name": "shocks-shop-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a147501e78bcf011"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.socks-shop-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "socks-shop-cluster-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "105.112.17.88/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-852504740",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09867945e550a3ca2",
            "security_group_rule_id": "sgr-0df9c578a943ad2c5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.socks-shop-cluster",
            "aws_vpc.socks-shop-vpc",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "socks-shop",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248426330598:subnet/subnet-02982534dfd1a9b65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02982534dfd1a9b65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248426330598",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "socks-shop-eks-node",
              "kubernetes.io/cluster/socks-web-shop-eks": "shared"
            },
            "tags_all": {
              "Name": "socks-shop-eks-node",
              "kubernetes.io/cluster/socks-web-shop-eks": "shared"
            },
            "vpc_id": "vpc-0a147501e78bcf011"
          },
          "dependencies": [
            "aws_vpc.socks-shop-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248426330598:subnet/subnet-0eca6a9a2ac4aeb18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eca6a9a2ac4aeb18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248426330598",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "socks-shop-eks-node",
              "kubernetes.io/cluster/socks-web-shop-eks": "shared"
            },
            "tags_all": {
              "Name": "socks-shop-eks-node",
              "kubernetes.io/cluster/socks-web-shop-eks": "shared"
            },
            "vpc_id": "vpc-0a147501e78bcf011"
          },
          "dependencies": [
            "aws_vpc.socks-shop-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "socks-shop-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:248426330598:vpc/vpc-0a147501e78bcf011",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07f4654ad88b6a7d4",
            "default_route_table_id": "rtb-0388f9caa8946d62d",
            "default_security_group_id": "sg-0f7ea83fde7a86da2",
            "dhcp_options_id": "dopt-04c235e8533a52083",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a147501e78bcf011",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0388f9caa8946d62d",
            "owner_id": "248426330598",
            "tags": {
              "Name": "socks-shop-eks-node",
              "kubernetes.io/cluster/socks-web-shop-eks": "shared"
            },
            "tags_all": {
              "Name": "socks-shop-eks-node",
              "kubernetes.io/cluster/socks-web-shop-eks": "shared"
            }
          }
        }
      ]
    }
  ]
}